# MORPH-Orchestrates-Recursive-Pruned-Hierarchies

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
Incomplete/: jpmhc-reference-archive.md  morph-block-label-fix.md
ai-notes/Incomplete/: gla-context-coverage-review.md
docs/: cross_layer_kv_sharing.md  deployable_quant_stack.md  fp8_mixed_precision_training.md  references.md
docs/figures/: morph_attention.tex  morph_block.tex  morph_cms_lifecycle.tex  morph_context_coverage.tex  morph_deploy_stack.tex  morph_embeddings.tex  morph_memory.tex  morph_overview.tex
docs/references/: 1803.03635.md  1806.03417.md  1907.05242.md  2002.05202.md  2211.15841.md  2309.17453.md  2402.17764.md  2402.19173.md  2404.19737.md  2409.03137.md  2409.19606.md  2412.14711.md  2501.00663.md  2509.14252.md  2510.04476.md  2511.08544.md  2512.24695.md  2512.24880.md  2602.05258.md  2602.18308.md  2602.22617.md  2603.09078.md  2603.15031.md  2604.12946.md  2604.18464.md  2605.05365.md  2605.06546.md  MANIFEST.md  block-ell-nvidia.md  deepseek-v4.md  hybrid-embeddings-gu2019.md
ignore/: gate_batched_decode.py  gate_mixedlen_decode.py  probe_divergence.py  probe_prefill.py  z3_batched_gather.py  z3_mixedlen_pos.py
morph/: __init__.py
morph/configs/: base.yaml  cloud.yaml  pretrain_curriculum.yaml  pretrain_curriculum_smoke.yaml  scale30b.yaml  sft.yaml  sft_reasoning.yaml  ssm_all.yaml  (+6 more)
scripts/: accept_posttrain_artifact.py  mem_probe.py  pretok_hub.py  pretokenize.py  throughput_probe.py
tests/: test_posttrain_contract.py  test_seed_model_patches.py
tile-prover/: journal.md
(+134 files in other folders)
