[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "morph"
version = "0.1.0"
description = "MORPH — Orchestrates Recursive Pruned Hierarchies"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "triton>=2.1.0",
    "transformers>=4.35.0",
    "datasets",
    "ijson",            # streaming JSON-array parse for the math pretok source (pyarrow int32 fix)
    "wandb",
    "hydra-core>=1.3",
    "omegaconf",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]
train = [
    "bitsandbytes",
]
tpu = [
    "jax[tpu]",
    "flax",
    "optax",
]

[tool.setuptools.packages.find]
include = ["morph*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]
